<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <import type="android.view.View" />
        <variable
            name="viewModel"
            type="in.nadil.squashapps.ui.main.MainViewModel" />
    </data>

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">



    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:padding="10dp"
        android:onClick="@{()->viewModel.onclicked(1)}"
        android:contentDescription="@string/backicon"
        android:src="@drawable/back_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="7dp"
        android:padding="10dp"
        android:onClick="@{()->viewModel.switchpop()}"
        android:contentDescription="@string/moreicon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/more_icon" />


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:overScrollMode="never"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imageView3"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/profile"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/verify_bg"
                android:contentDescription="@string/verifyicon"
                android:padding="5dp"
                android:src="@drawable/verify_tick"
                app:layout_constraintEnd_toEndOf="@+id/imageView3"
                app:layout_constraintTop_toTopOf="@+id/imageView3" />


            <in.nadil.squashapps.customviews.TextViewMedium
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/eleanor_pena"
                android:textColor="@color/white"
                android:textSize="26sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView3" />

            <in.nadil.squashapps.customviews.TextViewMedium
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/eleanor333"
                android:textColor="@color/white"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <in.nadil.squashapps.customviews.TextViewRegular
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:gravity="center"
                android:text="@string/persons_bio_data_nlorem_ipsum_dolor_sit_amet_cons"
                android:textColor="@color/white"
                android:textSize="13sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <in.nadil.squashapps.customviews.TextViewMedium
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:background="@drawable/button_bg"
                android:paddingStart="50dp"
                android:paddingTop="11dp"
                android:paddingEnd="50dp"
                android:paddingBottom="11dp"
                android:text="@string/follow"
                android:textColor="@color/black"
                android:textSize="15sp"
                app:layout_constraintEnd_toStartOf="@+id/textView5"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/countsec" />

            <ImageView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginStart="8dp"
                android:background="@drawable/sentbg"
                android:paddingStart="16dp"
                android:contentDescription="@string/sendicon"
                android:paddingEnd="16dp"
                android:src="@drawable/sent_icon"
                app:layout_constraintBottom_toBottomOf="@+id/textView4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/textView4"
                app:layout_constraintTop_toTopOf="@+id/textView4"
                app:layout_constraintVertical_bias="1.0" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/countsec"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:weightSum="8"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:gravity="center"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <in.nadil.squashapps.customviews.TextViewBold
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/_10k"
                                android:textColor="@color/green"
                                android:textSize="18sp" />

                            <in.nadil.squashapps.customviews.TextViewRegular
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="4dp"
                                android:text="@string/followers"
                                android:textColor="@color/white"
                                android:textSize="10sp"
                                tools:ignore="SmallSp" />

                        </LinearLayout>
                    </LinearLayout>

                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:layout_margin="3dp"
                        android:background="@color/green" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:gravity="center"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <in.nadil.squashapps.customviews.TextViewBold
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/_1_1k"
                                android:textColor="@color/green"
                                android:textSize="18sp" />

                            <in.nadil.squashapps.customviews.TextViewRegular
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="4dp"
                                android:text="@string/following"
                                android:textColor="@color/white"
                                android:textSize="10sp"

                                tools:ignore="SmallSp" />

                        </LinearLayout>
                    </LinearLayout>

                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:layout_margin="3dp"
                        android:background="@color/green" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:gravity="center"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <in.nadil.squashapps.customviews.TextViewBold
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/_15_2m"
                                android:textColor="@color/green"
                                android:textSize="18sp" />

                            <in.nadil.squashapps.customviews.TextViewRegular
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="4dp"
                                android:text="@string/views"
                                android:textColor="@color/white"
                                android:textSize="10sp"

                                tools:ignore="SmallSp" />

                        </LinearLayout>
                    </LinearLayout>

                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:layout_margin="3dp"
                        android:background="@color/green" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:gravity="center"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <in.nadil.squashapps.customviews.TextViewBold
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/_75_2m"
                                android:textColor="@color/green"
                                android:textSize="18sp" />

                            <in.nadil.squashapps.customviews.TextViewRegular
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="4dp"
                                android:text="@string/likes"
                                android:textColor="@color/white"
                                android:textSize="10sp"

                                tools:ignore="SmallSp" />

                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>


            <View
                android:id="@+id/dash1"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="25dp"
                android:background="@color/dash"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:layout_constraintEnd_toStartOf="@+id/textView6"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/dash1"
                app:srcCompat="@drawable/video_icon" />

            <in.nadil.squashapps.customviews.TextViewRegular
                android:id="@+id/textView6"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:layout_marginStart="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_125_videos"
                app:layout_constraintBottom_toBottomOf="@+id/imageView5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView5"
                app:layout_constraintTop_toTopOf="@+id/imageView5" />


            <View
                android:id="@+id/dash2"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="25dp"
                android:background="@color/dash"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView5" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/videorecycler"
                android:layout_width="0dp"
                android:paddingTop="10dp"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:spanCount="3"
                android:nestedScrollingEnabled="false"
                android:layout_height="wrap_content"
                android:layout_marginEnd="-2dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dash2" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="120dp"
        android:background="@drawable/pop_bg"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:onClick="@{()->viewModel.switchpop()}"
        android:visibility="@{viewModel.popup==true?View.VISIBLE:View.GONE}"
        android:layout_marginEnd="14dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2">

        <in.nadil.squashapps.customviews.TextViewRegular
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Share"
            android:padding="10dp"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textView9"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="@color/dash"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView8" />

        <in.nadil.squashapps.customviews.TextViewRegular
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Report"
            android:padding="10dp"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView9" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>